# src/routes/auth.routes.ts
@@ -1,13 +1,0 @@
-import { Router } from 'express';
-import AuthController from '../controllers/auth.controller';
-
-const router = Router();
-const authController = new AuthController();
-
-//router.get('/callback', authController.callback);
-router.post('/exchange-token', authController.exchangeToken);
-router.get('/google', authController.signInWithGoogle);
-router.get('/github', authController.signInWithGithub);
-//router.get('/facebook', authController.signInWithFacebook);
-
-export default router;
